--- a/web/src/Main.css
+++ b/web/src/Main.css
@@ -1,10 +1,11 @@
 main{
     flex: 1;
+    width: 100%;
 }
 
 main ul{
     display: grid;
-    grid-template-columns: 1fr 1fr;    
+    grid-template-columns: repeat(2, 1fr);    
     gap: 20px;
     list-style: none;
 }
